fixed hadoop url

--- a/docs/RepastBatchHadoop/RepastBatchHadoop.tex
+++ b/docs/RepastBatchHadoop/RepastBatchHadoop.tex
@@ -47,7 +47,7 @@
 \section{Before we Get Started}
 Before we can do anything with Repast Simphony, we need to make sure that we have a proper installation of Repast Simphony. Instructions on downloading and installing Repast Simphony on various platforms can be found on the \href{http://repast.sourceforge.net/download.html}{Repast website}.\footnote{http://repast.sourceforge.net/download.html} Repast Simphony 2.3 requires at least Java 7, but will run on Java 8 as well. Java 7 / 8  can be found at the \href{http://www.oracle.com/technetwork/java/javase/downloads/index.html}{Java Standard Edition Downloads Page}.\footnote{http://www.oracle.com/technetwork/java/javase/downloads/index.html} 
 
-This document assumes working knowledge of the Repast Simphony batch run mechanism as well as knowledge of Hadoop. More info on the batch run mechanism can be found in the \href{http://repast.sourceforge.net/docs/RepastBatchRunsGettingStarted.pdf}{Repast Batch Run Getting Started Guide}.\footnote{http://repast.sourceforge.net/docs/RepastBatchRunsGettingStarted.pdf} More information on Hadoop can be found at the \href{https://hadoop.apache.org}{Hadoop Website}.\footnote{http://https://hadoop.apache.org} The example code and the documentation on which this documents is based were contributed to Repast Simphony by Mitre under a BSD style license and we thank them for their contribution. The project was developed by the MITRE Corporation under FAA Mission-Oriented Investigation and Experimentation.
+This document assumes working knowledge of the Repast Simphony batch run mechanism as well as knowledge of Hadoop. More info on the batch run mechanism can be found in the \href{http://repast.sourceforge.net/docs/RepastBatchRunsGettingStarted.pdf}{Repast Batch Run Getting Started Guide}.\footnote{http://repast.sourceforge.net/docs/RepastBatchRunsGettingStarted.pdf} More information on Hadoop can be found at the \href{https://hadoop.apache.org}{Hadoop Website}.\footnote{https://hadoop.apache.org} The example code and the documentation on which this documents is based were contributed to Repast Simphony by Mitre under a BSD style license and we thank them for their contribution. The project was developed by the MITRE Corporation under FAA Mission-Oriented Investigation and Experimentation.
 
 \section{Repast Simphony Batch Runs Using Hadoop}
 The purpose of this document is to explain how to enable Repast Simphony simulations to run on a Hadoop cluster as a map / reduce job. The simulations themselves are run as mappers and the output produced by each simulation is passed to the reduce via a write on a Hadoop Context. The companion code to this document is an example of the Java Zombies model adapted to work with Hadoop. That Repast Simphony project should be contained in the zip file that accompanies this document. The example source is divided into two packages: zombies and hadoop. The zombies package includes the model as well as any model specific hadoop code (e.g. the JZombies specific Hadoop reducer). The hadoop package includes code that can be used for any model and adapts the archive created by Repast Simphony batch for use with Hadoop.
